...
            type="neptun.jxy1vz.hp_cluedo.ui.activity.menu.MenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/menuRoot"
        android:background="@drawable/hogwarts">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
